--- a/ChessPiecesBacktracking/nbproject/project.properties
+++ b/ChessPiecesBacktracking/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ChessPiecesBacktracking
-main.class=chesspiecesbacktracking.ChessPiecesBacktracking
+main.class=elementosBidimensionales.VentanaGrafica
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
