--- a/ChessPiecesBacktracking/nbproject/private/private.properties
+++ b/ChessPiecesBacktracking/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/Marta/Library/Application Support/NetBeans/16/build.properties
+user.properties.file=C:\\Users\\jartu\\AppData\\Roaming\\NetBeans\\15\\build.properties
